--- a/style.css
+++ b/style.css
@@ -105,6 +105,55 @@ main > section{
     margin-left: 130px;
     max-width: 530px;
 }
+
+.features{
+    gap: 140px;
+}
+
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+}
+.feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.featured-architect img{
+    width: 100%;
+}
+
 .teams{
     align-items: center;
 }
@@ -134,9 +183,7 @@ main > section{
     display: grid;
     grid-template-columns: repeat(4,1fr);
 }
-.fact-icon{
-    /* margin-top: 45px; */
-}
+
 .fact-card{
     border: 1px solid rgb(255, 144, 14);
     border-radius: 8px;
@@ -171,7 +218,7 @@ main > section{
 
 .footer{
     max-width: 1440px;
-    max-height: 100px;
+    /* height: 100px; */
     background-color: rgb(255, 244, 231);
     border-radius: 8px;
     margin: 130px auto;
@@ -192,7 +239,8 @@ main > section{
 @media screen and ( max-width: 576px) {
     .Nav-bar,
     .Nav-links,
-    .teams{
+    .teams,
+    .features{
         flex-direction: column;
     }
     .image-Cointainer,
@@ -203,6 +251,14 @@ main > section{
     .image-Feture{
         margin-left: 20px;
     }
+    .our-features{
+        margin-left: 20px;
+    }
+
+    #experience-badge{
+        margin-top: -50px;
+        margin-left:0;
+    }
     .fact-container,
     .sponsor-info{
         justify-items: center;
@@ -211,10 +267,23 @@ main > section{
         gap: 50px;
         justify-items: center;
     }
+    .footer-description{
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        padding-top: 39px;
+        padding-bottom: 39px;
+    }
 }
 @media screen and (min-width: 576px) and (max-width: 992px) {
+    .Nav-bar{
+        padding: 15px 20px 0px 20px;
+
+    }
+    
     .teams,
-    .image-Feture{
+    .image-Feture,
+    .features{
         flex-direction: column;
     }
     .our-features{
@@ -225,5 +294,16 @@ main > section{
         grid-template-columns: repeat(2, 1fr);
         gap: 50px;
         justify-items: center;
+    }
+    .footer-description{
+        padding: 0%;
+        width: 100%;
+        height: 100%;
+        padding-top: 39px;
+        padding-bottom: 39px;
+    }
+    #experience-badge{
+        margin-top: -70px;
+        margin-left:0px;
     }
 }
